# metrix

./: Makefile  README.md  pyproject.toml
metrix/: __init__.py  metrix.py
tests/: test_metrix.py
