[tool.poetry]
name = "metrix"
version = "0.1.0"
description = ""
authors = ["Kiryl Liaushun <klmail98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^20.8b1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip = ".eggs,.pip-cache,.poetry,venv,.venv,libs"